--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,11 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <h1 class="header center light-blue-text text-darken-4">{{ page.title }}</h1>
+	{{ content }}
+    </div>
+  </div>
 
-    {{ content }}
-
-</div>
