--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
           <h5 class="white-text"></h5>
           <ul>
             <li>{% include icon-github.html username=site.github_username %}</li>
+            <li>{% include icon-rss.html %}</li>
           </ul>
         </div>
       </div>
