--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" type="text/css" media="screen,projection" href="{{ "/assets/main.css" | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}" />
-  
     <link rel="icon" type="image/x-icon" href="{{ "/images/upsud-logo-small.jpg" | prepend: site.baseurl }}">
 
+    {% feed_meta %}
+    
     {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
     {% endif %}
