--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
         {% for path in page_paths %}
           {% assign my_page = site.pages | where: "path", path | first %}
           {% if my_page.menu %}
-            {% assign my_page_collection = my_page.name | replace: '.md' '' %}
+            {% assign my_page_collection = my_page.menu | slugify: 'default' | replace: "é", "e" | replace: "è", "e" | replace: "-", "_" %}
             {% if site.[my_page_collection] %}
               <li class="no-padding">
                 <ul class="collapsible collapsible-accordion">
