--- a/assets/materialize.scss
+++ b/assets/materialize.scss
@@ -39,6 +39,11 @@ h5 {
   font-style: italic;
 }
 
+.home_content {
+  font-style: italic;
+  font-zie: $h5-fontsize;
+}
+
 .centered-image {
   margin: 0 auto;
   display: block;
