--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">{{ site.title }}</h1>
+      <h1 class="header center light-blue-text text-darken-4">{{ site.title }}</h1>
       <div class="row center">
         <span class="home_content col s12 light">{{ content }}</span>
       </div>
